Generate Swagger client
