# swagger.yaml
@@ -3,15 +3,17 @@ consumes:
 - application/json
 definitions:
   GenericError:
-    description: GenericError is a generic error message returned by a server
+    description: GenericError GenericError is a generic error message returned by
+      a server
     properties:
       message:
+        description: message
         type: string
         x-go-name: Message
     type: object
-    x-go-package: github.com/ywpark1/microservice-in-go/handlers
+    x-go-package: github.com/ywpark1/microservice-in-go/models
   Product:
-    description: structure for API product with struct tag
+    description: Product structure for API product with struct tag
     properties:
       description:
         description: the description for this poduct
@@ -45,17 +47,19 @@ definitions:
     - price
     - sku
     type: object
-    x-go-package: github.com/ywpark1/microservice-in-go/data
+    x-go-package: github.com/ywpark1/microservice-in-go/models
   ValidationError:
-    description: ValidationError is a collection of validation error messages
+    description: ValidationError ValidationError is a collection of validation error
+      messages
     properties:
       messages:
+        description: messages
         items:
           type: string
         type: array
         x-go-name: Messages
     type: object
-    x-go-package: github.com/ywpark1/microservice-in-go/handlers
+    x-go-package: github.com/ywpark1/microservice-in-go/models
 info:
   description: Documentation for Product API
   title: of Product API
@@ -96,7 +100,7 @@ paths:
       description: Update a products details
       operationId: deleteProduct
       parameters:
-      - description: The id of the product to delete from the database
+      - description: The id of the product for which the operation relates
         format: int64
         in: path
         name: id
@@ -114,7 +118,15 @@ paths:
       - products
     get:
       description: Return a list of products from the database
-      operationId: listSingle
+      operationId: listSingleProduct
+      parameters:
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
       responses:
         "200":
           $ref: '#/responses/productResponse'
